--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
     background: #ffffff;
-    color: #111827;
+    color: #000000ff;
     line-height: 1.6;
 }
 
@@ -187,7 +187,7 @@ main {
     flex: 0 0 150px;
     padding-top: 10px;
     font-weight: 500;
-    color: #374151;
+    color: #000000;
     font-size: 14px;
 }
 
